<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.csto</groupId>
  <artifactId>csto2</artifactId>
  <version>0.1.0</version>
  <name>CSTO v2 - comprehension-driven test-order optimizer</name>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <wala.version>1.7.2</wala.version>
  </properties>

  <dependencies>
    <!-- Static analysis. Pulls com.ibm.wala.util + com.ibm.wala.shrike transitively. -->
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.core</artifactId>
      <version>${wala.version}</version>
    </dependency>
    <!-- For the Surefire instrumentation agent's JUnit Platform TestExecutionListener. Provided:
         the target test JVM already has junit-platform-launcher on its classpath at runtime. -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>1.9.3</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>csto2</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration><release>${maven.compiler.release}</release></configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.csto2.Csto2</mainClass>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Slim instrumentation agent jar (csto2-agent.jar): a -javaagent injected into the Surefire
           fork that registers a JUnit TestExecutionListener (per-class MXBean/JFR facts). Excludes
           WALA/optimize; just the agent + JfrProbe + Json + the listener service file. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
        <executions>
          <execution>
            <id>agent</id>
            <phase>package</phase>
            <goals><goal>jar</goal></goals>
            <configuration>
              <classifier>agent</classifier>
              <includes>
                <include>com/csto2/agent/**</include>
                <include>com/csto2/trace/JfrProbe*.class</include>
                <include>com/csto2/util/Json*.class</include>
                <include>META-INF/services/**</include>
              </includes>
              <archive>
                <manifest><addDefaultImplementationEntries>false</addDefaultImplementationEntries></manifest>
                <manifestEntries>
                  <Premain-Class>com.csto2.agent.Csto2Agent</Premain-Class>
                  <Can-Retransform-Classes>false</Can-Retransform-Classes>
                </manifestEntries>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
